2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):
	* lib/ephy-dnd.c: (ephy_dnd_drag_data_get):

	More gcc4 fixes.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (icons_removed_cb):

	Fix crash! I wonder how nobody never noticed this one.

2005-07-30  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
	
	Sync with HEAD.

2005-07-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/prefs-dialog.c: (prefs_homepage_current_button_clicked_cb):

	Fix setting homepage to current page. Fixes bug #311962.

2005-07-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c: (button_toggled_cb):

	Use connect_object to connect to the menu's deactivate
	signal. May fix bug #309918.

2005-07-25  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_launch_desktop_file):

	Don't crash in case the desktop file is not found.

2005-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c: (connect_proxy):
	* src/bookmarks/ephy-topic-action.c: (append_bookmarks_menu),
	(connect_proxy):

	Also ellipsise the menu entries in the toolbar overflow menu.

2005-07-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c
	* embed/mozilla/ContentHandler.cpp
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp

	Don't use format_secondary_markup here, it's a) unnecessary
	and b) doesn't do what we think it does.

2005-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany.schemas.in:

	Fix default printer name. Fixes bug #301730.
	
2005-07-13  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add application/rdf+xml to list of known mime types.

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyBrowser.h:
	* embed/mozilla/mozilla-embed.cpp:
